# vkbot-100-to-1-game

./: .gitignore  alembic.ini  config.yml  pyproject.toml  requirements.txt  ruff.toml
alembic/versions/: 2023_03_06_1655-5765cfc5366a_added_is_lost_to_statistics.py  2023_03_08_1448-c93bf151d299_added_bool_in_process_field_to_games.py  2023_03_10_1718-6b954ac73bc9_added_is_winner_field_to_statistics_.py  2023_03_23_1334-2ad63ae3f10e_added_first_name_and_last_name_to_users.py  2023_03_23_1343-36ef0cb492ff_rename_fisrt_name_to_first_name_in_users.py  2023_03_23_1353-66221b312dd1_change_first_name_and_last_name_to_.py  d22ecba86cc4_init.py
app/admin/: dataclasses.py  models.py  views.py
app/game/: dataclasses.py  models.py  routes.py  schemes.py  views.py
app/store/: __init__.py  utils.py
app/store/admin/: accessor.py
app/store/bot/: constants.py  enums.py  game.py  keyboards.py  logic_helper.py  manager.py  message.py  tasks_manager.py  update_handler.py  updates.py  user.py  utils.py
app/store/database/: __init__.py  database.py
app/store/game/: accessor.py
app/store/vk_api/: accessor.py  dataclasses.py  poller.py
app/web/: app.py  middlewares.py  utils.py
