[tool.poetry]
name = "vkbot-100-to-1-game"
version = "0.1.0"
description = ""
authors = ["Ivan Kulesh <ivan.kulesh@saritasa.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
aiohttp-apispec = "^2.2.3"
aiohttp-session = "^2.12.0"
aioresponses = "^0.7.6"
aiosignal = "^1.3.1"
alembic = "^1.13.1"
apispec = "3.3.2"
async-timeout = "^4.0.3"
asyncpg = "^0.29.0"
attrs = "^23.2.0"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
coverage = "^7.5.3"
cryptography = "^42.0.7"
freezegun = "^1.5.1"
frozenlist = "^1.4.1"
greenlet = "^3.0.3"
idna = "^3.7"
iniconfig = "^2.0.0"
jinja2 = "^3.1.4"
mako = "^1.3.5"
markupsafe = "^2.1.5"
marshmallow = "^3.21.2"
multidict = "^6.0.5"
packaging = "^24.0"
pluggy = "^1.5.0"
py = "^1.11.0"
pycparser = "^2.22"
pyparsing = "^3.1.2"
pytest = "^8.2.1"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
python-dateutil = "^2.9.0.post0"
pyyaml = "^6.0.1"
six = "^1.16.0"
sqlalchemy = "^2.0.30"
tomli = "^2.0.1"
webargs = "5.5.3"
yarl = "^1.9.4"
ruff = "^0.4.7"
mypy = "^1.10.0"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
